SyntacticAnalyzer/tests/fail/return-expresion.java
class foo {

	ctor(int n1)
		var int n2;
	{
		// no se puede asignar a un return
		return = n1 + n2;
	}
}
